--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body id="body">
+<body id="body" class="bg">
 	<div id="weather">
 		Your Weather Template
 	</div>
