got todos adding finally working on delete/quote

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<form onsubmit="app.controllers.todoController.addTodoFromForm(event)">
 			<input type="text" name="description">
 		</form>
+		<button onclick="app.controllers.todoController.removeTodo()">delete</button>
 		A Todo List
 	</div>
 
